--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities; 
+
+
+.tool-icon:nth-of-type(1) {
+  top: -2rem;
+  right: 8rem;
+}
+
+.tool-icon:nth-of-type(2) {
+  top: 7rem;
+  right: 1rem;
+}
+
+.tool-icon:nth-of-type(3) {
+  top: 6rem;
+  right: 12rem;
+}
+
+.tool-icon:nth-of-type(4) {
+  top: 18rem;
+  right: 2rem;
+}
+
+.tool-icon:nth-of-type(5) {
+  top: 30rem;
+  right: 8rem;
+}
