--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,28 +8,8 @@
 @tailwind components;
 @tailwind utilities; 
 
-
-.tool-icon:nth-of-type(1) {
-  top: -2rem;
-  right: 8rem;
-}
-
-.tool-icon:nth-of-type(2) {
-  top: 7rem;
-  right: 1rem;
-}
-
-.tool-icon:nth-of-type(3) {
-  top: 6rem;
-  right: 12rem;
-}
-
-.tool-icon:nth-of-type(4) {
-  top: 18rem;
-  right: 2rem;
-}
-
-.tool-icon:nth-of-type(5) {
-  top: 30rem;
-  right: 8rem;
+@layer utilities {
+    .section {
+        @apply w-full flex flex-col pt-20 px-10 xl:w-[80%];
+    }
 }
